--- a/index.html
+++ b/index.html
@@ -6,20 +6,30 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <!-- <link rel="stylesheet" href="/Food_Inspection.css"> -->
+    <!-- Style sheet for webpage (Internal)-->
+    <link rel="stylesheet" href="Food_Inspection.css"> 
+
+    <!-- Style sheet for Leaflet Map (External) -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js" integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og==" crossorigin=""></script>
 	
 </head>
 <body>
     <div class="wrapper">
-        <h1>Food Inspection Map</h1>
-        <p>Below is a map of Prince George's County</p>
+        <div class="filter">
+            <p>Filter will go here</p>
+        </div>
 
-        <div id="mapid" style="width: 600px; height: 400px;"></div>
+        <div class="OutputContainer">
+            <h1>Food Inspection Map</h1>
+            <p>Below is a map of Prince George's County</p>
+            
+            <div id="mapid" style="width: 600px; height: 400px;"></div>
+        </div>
     </div>
 
 
+    <!-- Script for Leaflet Map -->
     <script>
         var mymap = L.map('mapid').setView([38.7849, -76.872], 10); // ([PG Coordinates], Zoom Level)
 
@@ -41,5 +51,6 @@
         }).addTo(mymap);
 
     </script>
+
 </body>
 </html>
