Added filter check boxes + submit button

--- a/index.html
+++ b/index.html
@@ -16,15 +16,21 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="filter">
-            <p>Filter will go here</p>
-        </div>
-
+    
         <div class="OutputContainer">
             <h1>Food Inspection Map</h1>
             <p>Below is a map of Prince George's County</p>
             
             <div id="mapid" style="width: 600px; height: 400px;"></div>
+        </div>
+
+        <div class="filter">
+            <h1>Filter</h1>
+            <!-- <input type="text" placeholder="Search.."> -->
+            <input type="checkbox" name="filter1" value="Filter_1"> Filter Description<br>
+            <input type="checkbox" name="filter2" value="Filter_2"> Filter Description<br>
+            <input type="checkbox" name="filter3" value="Filter_3" checked> Filter Description<br><br>
+            <input type="submit" value="Submit">
         </div>
     </div>
 
