--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     
         <div class="OutputContainer">
             <h1>Food Inspection Map</h1>
-            <p>Below is a map of Prince George's County</p>
+            <p>Below is a map of Prince George's County. Use the filter to refine your search.</p>
             
             <div id="mapid" style="width: 600px; height: 400px;"></div>
         </div>
 
         <div class="filter">
-            <h1>Filter</h1>
+            <h3>Filter</h3>
             <!-- <input type="text" placeholder="Search.."> -->
             <input type="checkbox" name="filter1" value="Filter_1"> Filter Description<br>
             <input type="checkbox" name="filter2" value="Filter_2"> Filter Description<br>
