--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 	<title>Food Inspection</title>
-
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/0.4.0/MarkerCluster.css" />
     <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/0.4.0/MarkerCluster.Default.css" />
-    <link rel="stylesheet" href="Food_Inspection.css" />
+    <link rel="stylesheet" href="style.css" />
  
     <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
     <script type='text/javascript' src='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js'></script>
@@ -20,6 +19,7 @@
     
         <div class="OutputContainer">
             <h1>Food Inspection Map</h1>
+            <a href="README.md">README</a>
             <p>Below is a map of Prince George's County. Use the filter to refine your search.</p>
             
             <div id="mapid" style="width: 700px; height: 600px;"></div>
