--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
     </div>
 
     <div id="links">
-        <a href="README.md">README |</a>
-        <a href="user.md">User Manual |</a>
+        <a href="README.md">README</a>
+        <a href="user.md">User Manual</a>
         <a href="docs/final.md">Final Report</a>
     </div>
-    <hr>
     <div class="wrapper">
         <div class="OutputContainer">
             <p>Below is a map of Prince George's County. Use the filter to refine your search.</p>
