Made about page and user.md

--- a/About.html
+++ b/About.html
@@ -28,33 +28,26 @@
     </div>
 
     <div id="links">
-        <a href="index.html">Home</a>
-        <a href="About.html">About</a>
-
- 
+            <a href="index.html">Home</a>
+            <a href="About.html">About</a>
     </div>
     <div class="wrapper">
         <div class="OutputContainer">
-            <p>Below is a map of Prince George's County. Use the filter to refine your search.</p>
-            <div id="mapid" style="width: 700px; height: 600px;"></div>
+            <h4>About</h4>
+
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent leo dui, faucibus eget lacus eget, ultricies porta tortor. 
+                Nullam commodo, ex tempus pellentesque rhoncus, nulla velit ultrices nulla, nec faucibus libero dolor quis velit. Curabitur 
+                pellentesque pulvinar purus, ac scelerisque arcu viverra a. Donec congue eget sem quis posuere. Morbi gravida enim et lectus 
+                consectetur, nec laoreet sem gravida. Nullam a mattis sapien. Sed ac rhoncus arcu. Donec tristique sit amet diam in tincidunt. 
+                Nam sed ipsum ultricies, bibendum ante at, aliquet urna. Mauris id maximus eros.
+                In dictum ac urna ac luctus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Suspendisse potenti. Curabitur in aliquet nisl. Vivamus bibendum felis in pulvinar lobortis. 
+                Ut sed arcu neque. Fusce vestibulum purus et rutrum finibus.
+            </p>
+
         </div>
 
-        <div class="filter">
-            <h3>Filter</h3>
-            <!-- <input type="text" placeholder="Search.."> -->
-            <input type="checkbox" name="filter1" value="Filter_1"> Filter Description<br>
-            <input type="checkbox" name="filter2" value="Filter_2"> Filter Description<br>
-            <input type="checkbox" name="filter3" value="Filter_3" checked> Filter Description<br><br>
-            <input type="submit" value="Submit">
-        </div>
-    </div>
-
-    <!-- Script for Leaflet Map -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="javascript/leaflet.markercluster.js"></script>
-    <script src="javascript/leaflet.js"></script>
-    <script src="javascript/leaflet.markercluster.js"></script>
-    <script src="javascript/map.js" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 
 </body>
 
