Updated Documentation + CSS + menu buttons

--- a/About.html
+++ b/About.html
@@ -16,8 +16,16 @@
     <script type='text/javascript' src='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js'></script>
     <script type='text/javascript'
         src='http://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/0.4.0/leaflet.markercluster.js'></script>
-</head>
-</head>
+
+    <style>
+        footer {
+            padding: 10px;
+            text-align: center;
+            color: white;
+        }
+    </style>
+
+    </head>
 
 <body>
     <div id="header">
@@ -28,23 +36,52 @@
     </div>
 
     <div id="links">
-            <a href="index.html">Home</a>
-            <a href="About.html">About</a>
+        <a href="index.html">Home</a>
+        <a href="About.html">About</a>
+        <a href="https://github.com/bcantillano/INST377_Food_Inspection/tree/master/docs">Documentation</a>
     </div>
+
     <div class="wrapper">
         <div class="OutputContainer">
-            <h4>About</h4>
+            <h1>About</h1>
 
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent leo dui, faucibus eget lacus eget, ultricies porta tortor. 
-                Nullam commodo, ex tempus pellentesque rhoncus, nulla velit ultrices nulla, nec faucibus libero dolor quis velit. Curabitur 
-                pellentesque pulvinar purus, ac scelerisque arcu viverra a. Donec congue eget sem quis posuere. Morbi gravida enim et lectus 
-                consectetur, nec laoreet sem gravida. Nullam a mattis sapien. Sed ac rhoncus arcu. Donec tristique sit amet diam in tincidunt. 
-                Nam sed ipsum ultricies, bibendum ante at, aliquet urna. Mauris id maximus eros.
-                In dictum ac urna ac luctus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Suspendisse potenti. Curabitur in aliquet nisl. Vivamus bibendum felis in pulvinar lobortis. 
-                Ut sed arcu neque. Fusce vestibulum purus et rutrum finibus.
-            </p>
+            <h2>The purpose of our website: </h2>
+
+            <ul>
+                <li>
+                    There is no way for people to see what restaurants, food inspection,and 
+                areas are compliant and not compliant in the prince george county area. 
+                On our website, residents of the prince George county area can find restaurants 
+                whether pass food inspections or not.
+                </li>
+            </ul>
+
+            <h2>Our function:</h2>
+            <ul>
+                <li>
+                    We create a coordinate based on a map of Prince George County to show the inspection 
+                    status of all restaurants to the user.
+                </li>
+
+            </ul>
+
+            <h2>Stakeholders:</h2>
+            <ul>
+                <li>Prince George's County Residents</li>
+                <li>Students</li>
+                <li>Restaurant manager</li>
+            </ul>
+            
+            <h2>Technology Stack  </h2>
+            <ul>
+                <li>Node.js code</li>
+                <li>HTML/CSS</li>
+                <li>Leaflet JavaScript API</li>
+            </ul>
+    
+    <footer>
+      <p>Developers: Ayodeji Adeleke, Byron Cantillano, Luke Gibson, Jonathan Land, Ken Lin, Emmanuel Mekonnen</p>
+    </footer>
 
         </div>
 
