--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <div id="links">
         <a href="index.html">Home</a>
         <a href="About.html">About</a>
-
- 
+        <a href="https://github.com/bcantillano/INST377_Food_Inspection/tree/master/docs">Documentation</a>
     </div>
+    
     <div class="wrapper">
         <div class="OutputContainer">
             <h4>Below is a map of Prince George's County. Use the filter to refine your search.</h4>
