--- a/About.html
+++ b/About.html
@@ -16,23 +16,14 @@
     <script type='text/javascript' src='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js'></script>
     <script type='text/javascript'
         src='http://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/0.4.0/leaflet.markercluster.js'></script>
-
-    <style>
-        footer {
-            padding: 10px;
-            text-align: center;
-            color: white;
-        }
-    </style>
-
-    </head>
+</head>
 
 <body>
     <div id="header">
         <header>
             <h1>Prince George's County Food Inspection Map</h1>
         </header>
-            <h3><b>Project Links</b></h3>
+        <h3><b>Project Links</b></h3>
     </div>
 
     <div id="links">
@@ -45,46 +36,39 @@
         <div class="OutputContainer">
             <h1>About</h1>
 
-            <h2>The purpose of our website: </h2>
+            <h2>Prince George's County Food Inspection Database </h2>
 
-            <ul>
-                <li>
-                    There is no way for people to see what restaurants, food inspection,and 
-                areas are compliant and not compliant in the prince george county area. 
-                On our website, residents of the prince George county area can find restaurants 
-                whether pass food inspections or not.
-                </li>
-            </ul>
+            <p>There is currently no way for people to see what restaurants, food establishments, and areas are
+                compliant and not compliant with Prince George's County Food Inspections.Our application will highlight
+                areas of potential risk and show non-compliant food establishments in an intuitive way to users.
+            </p>
 
-            <h2>Our function:</h2>
-            <ul>
-                <li>
-                    We create a coordinate based on a map of Prince George County to show the inspection 
-                    status of all restaurants to the user.
-                </li>
+            <p>Our project group created a program that maps restaurants in Prince George's County that are
+                non-compliant with county food inspections.
+            </p>
 
-            </ul>
+            <p>Our stakeholders include Prince George's County Residents, UMD students, local restaurant managers, and
+                the HHS.
+            </p>
 
-            <h2>Stakeholders:</h2>
-            <ul>
-                <li>Prince George's County Residents</li>
-                <li>Students</li>
-                <li>Restaurant manager</li>
-            </ul>
-            
-            <h2>Technology Stack  </h2>
-            <ul>
-                <li>Node.js code</li>
-                <li>HTML/CSS</li>
-                <li>Leaflet JavaScript API</li>
-            </ul>
-    
-    <footer>
-      <p>Developers: Ayodeji Adeleke, Byron Cantillano, Luke Gibson, Jonathan Land, Ken Lin, Emmanuel Mekonnen</p>
-    </footer>
+            <p>The technology stack that we used includes Node.js, HTML/CSS, and the Leaflet JavaScript API.</p>
 
+            <div class = "logos">
+
+                <a href="https://data.princegeorgescountymd.gov/Health/Food-Inspection/umjn-t2iz/data">
+                    <img src="https://data.princegeorgescountymd.gov/api/assets/68A289A4-F198-4DF4-91E1-A651C157C7AC" alt="Prince George's County Data"></img>
+                </a>
+
+                <a href="https://leafletjs.com/">
+                    <img src="https://leafletjs.com/docs/images/logo.png" alt="LeafletJS"></img>
+                </a>
+
+                <a href="https://nodejs.org/en/">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/1200px-Node.js_logo.svg.png" alt="Node.js"></img>
+                </a>
+            </div>
+                <h4>Developers: Ayodeji Adeleke, Byron Cantillano, Luke Gibson, Jonathan Land, Ken Lin, Emmanuel Mekonnen</h4>
         </div>
-
 
 </body>
 
