Revert "Merge branch 'master' of https://github.com/bcantillano/INST377_Food_Inspection"
This reverts commit 64fa8528d807cf3bea4803dff0329da055e0aa9f, reversing
changes made to 1fa466ba47d855b48351c0e3a4e87af629c47cea.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script type='text/javascript'
         src='http://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/0.4.0/leaflet.markercluster.js'></script>
 </head>
+</head>
 
 <body>
     <div id="header">
@@ -34,7 +35,7 @@
     
     <div class="wrapper">
         <div class="OutputContainer">
-            <h3>Below is a map of Prince George's County. Use the filter to refine your search.</h3>
+            <h4>Below is a map of Prince George's County. Use the filter to refine your search.</h4>
             <div id="mapid" style="width: 700px; height: 600px;"></div>
         </div>
 
