Implemented NodeJS on old build

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" crossorigin=""/>
     <script src="node_modules/leaflet/dist/leaflet.js"></script>
-    <script src="node_modules/leaflet.featuregroup.subgroup/dist/leaflet.featuregroup.subgroup-src.js"></script>
+    <!-- <script src="node_modules/leaflet.featuregroup.subgroup/dist/leaflet.featuregroup.subgroup-src.js"></script> -->
     <link rel="stylesheet" href="node_modules/leaflet.markercluster/dist/MarkerCluster.css" crossorigin=""/>
     <link rel="stylesheet" href="node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css" crossorigin=""/>
     <script src="node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
-    <script src="javascript/map.js"></script>
+    <!-- <script src="javascript/map.js"></script> -->
 </body>
 </html>
